--- a/book.bib
+++ b/book.bib
@@ -6,8 +6,18 @@
   year = {2015},
   edition = {2nd},
   note = {ISBN 978-1498716963},
-  url = {http://yihui.name/knitr/},
+  url = {http://yihui.name/knitr/}
 }
+
+@Book{hays1994,
+  title = {Statistics},
+  author = {Hays, William},
+  publisher = {Cengage Learning},
+  year = {1994},
+  edition = {5th},
+  note = {ISBN 978-0030744679}
+}
+
 
 @article{miyakawa2020,
   title={No raw data, no science: another possible source of the reproducibility crisis.},
