--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -2,9 +2,9 @@
 
 ## Overview
 
-In the previous chapter we focused on examining the extent to which we could estimate a population parameter from a statistic in an unbiased manner. That is, we focused on the fact that, due to sampling error, a sample estimate (i.e., a statistic) of a population parameter will likely be wrong.  Sample statistics may overestimate or underestimate a population parameter - often substantially. Consequently, we learned to think about accuracy of sample statistics. More specifically, we learned to think about accuracy not in terms of a single study, but rather  in terms of whether sample statistics correctly estimate the population parameter on average over many studies (as illustrated in Figure \@ref(fig:showbias2)). When the average of many sample statistics (e.g., sample means) equal the population parameter (e.g., population mean) there is no bias and the sample statistic can be considered accurate (on average). 
+In the previous chapter we focused on examining the extent to which we could estimate a population parameter from a statistic in an unbiased manner. That is, we focused on the fact that, due to sampling error, a sample estimate (i.e., a statistic) of a population parameter will likely be wrong. Sample statistics may overestimate or underestimate a population parameter - often substantially. Consequently, we learned to think about accuracy of sample statistics. More specifically, we learned to think about accuracy not in terms of a single study, but rather in terms of whether sample statistics correctly estimate the population parameter on average over many studies (as illustrated in Figure \@ref(fig:showbias2)). When the average of many sample statistics (e.g., sample means) equal the population parameter (e.g., population mean) there is no bias and the sample statistic can be considered accurate (on average). 
 
-In this chapter, we assume there is no bias and that sample means are, on average, accurate. In doing so, we move on to primarily focus on the precision of sample means as estimates of the population mean, see Figure \@ref(fig:showbias2). That is, assuming no bias, when you conduct a single study you know the sample mean will differ from the population mean due to sampling error. You might wonder how much does my sample mean differ from the population mean? That's the question we address in this chapter. When we conduct a single study we can't know how much that particular sample mean differs from the population mean, but we can estimate the extent to which sample mean differ from the population mean in general. We focus on two indices of precision -- variance of sample mean and standard error of sample means. By the end of the chapter will understand how to conceptualize these concepts with respect to a large number of samples/studies and estimate them a single study.
+In this chapter, we assume there is no bias and that sample means are, on average, accurate. In doing so, we focus now on the precision of sample means as estimates of the population mean, see Figure \@ref(fig:showbias2). That is, assuming no bias, when you conduct a single study you know the sample mean will differ from the population mean due to sampling error. You might wonder how much does my sample mean differ from the population mean? That's the question we address in this chapter. When we conduct a single study we can't know how much that particular sample mean differs from the population mean, but we can estimate the extent to which sample mean differ from the population mean in general. We focus on two indices of precision -- variance of sample mean and standard error of sample means. By the end of the chapter will understand how to conceptualize these indices with respect to a large number of samples/studies and estimate of them for a single study.
 
 
 ```{r showbias2, echo=FALSE, out.width = "80%", fig.cap = "Sampling accuracy and precision"}
@@ -34,13 +34,13 @@ The glimpse() command can be used to confirm that the population contains 100,00
 glimpse(pop_data)
 ```
 
-We can use the head() command to see the first 10 rows of the 100,00 rows. We see that each row in pop_data represents a single person. There is a column called height that contains the heights for everyone in the population.
+We can use the head() command to see the first 10 rows of the 100,00 rows. We see that each row in pop_data represents a single person. There is a column called height that contains the height for everyone in the population.
 
 ```{r}
 head(pop_data, 10)
 ```
 
-We can calculate the descriptive statistics for the population with the code below:
+We can calculate the descriptive parameters for the population with the code below:
 
 
 ```{r}
@@ -62,18 +62,18 @@ $$
 $$
 
 
-## Sampling distribution / sample means
+## Sampling distribution
 
-A sampling distribution is usually thought of as being composed of an infinite number of samples. For pedagogical purposes, we will use a sampling distribution of just 50000 samples. This is a large number of samples that will lead us to roughly the same conclusions as using an  impractical infinite number of samples. We obtain 50000 samples with code below:
+A sampling distribution is usually thought of as being composed of an infinite number of samples. For pedagogical purposes, we will use a sampling distribution of just 50000 samples. This large number of samples will lead us to roughly the same conclusions as using an infinite, but impractical, number of samples. We obtain 50000 samples with code below:
 
 ```{r}
 many_samples <- get_M_samples(pop.data = pop_data, 
                               pop.column.name = height,
                               n = 10,
-                              number.of.samples = 500)
+                              number.of.samples = 50000)
 ```
 
-We can use the head() command to see the first few rows of many_samples. Every row represents a sample of 10 people, that is, a study with 10 participants where we examine their heights. For each row/study we have the sample mean and variance (using n-1).
+We can use the head() command to see the first few rows of many_samples. Every row represents a sample of 10 people. That is, each row represents a study with 10 participants for which we measured their heights. For each row/study we have the sample mean and variance (using n-1) for the 10 heights.
 
 
 ```{r}
@@ -88,32 +88,32 @@ many_samples %>%
              max_mean = max(sample.mean))
 ```
 
-The 50000 means in the sample.mean column form a sampling distribution; specifically, the sample distribution of the mean. It's critical to distinguish the sampling distribution of the mean the distribution of people in the population. Examine Figure \@ref(fig:bothdist2) below. The top part of this figure illustrates the variability in the 100,000 people (represented by X’s). There are more people than X’s; the X’s are a reminder it is a distribution of people. The bottom part of this figure illustrates the variability in sample means - each based on 10 people. Each sample mean is an estimate of the population of mean of 172.5 cm.  There are more sample means than $\bar{x}$’s; the $\bar{x}$’s are a reminder it is a distribution of sample means. When we describe how precisely sample means estimate the population mean we are usually refering to the width of the this distribution of means. 
+The 50000 means in the sample.mean column form a **sampling distribution**; specifically, the sampling distribution of the mean. It's critical to distinguish the sampling distribution of the mean from the distribution of people in the population. Examine Figure \@ref(fig:bothdist2) below. The top part of this figure illustrates the variability in the 100,000 people (represented by X’s). There are more people than X’s; the X’s are a reminder it is a distribution of people. The bottom part of this figure illustrates the variability in sample means - each based on 10 people. Each sample mean is an estimate of the population of mean of 172.5 cm.  There are more sample means than $\bar{x}$’s; the $\bar{x}$’s are a reminder it is a distribution of sample means. When we describe how precisely sample means estimate the population mean we are refering to the width of this distribution of means. 
 
 
 ```{r bothdist2, echo = FALSE, out.width = "80%", fig.scap = "Sampling distribution of the mean.", fig.cap = "Sampling distribution of the mean. The population of individuals is presented at the top and filled with X's to remind you they are individuals. There are more individuals than X's. The sampling distribution of means is presented in the bottom part of the graph. The sampling distribution of means is filled with $\\bar{x}$'s to remind you that it is sample means being graphed. There are more means than $\\bar{x}$'s. The population mean (green line) and the mean of sample means (blue line) are in the same spot, indicating high accuracy (i.e., no bias)."}
 knitr::include_graphics("ch_samples/images/sampling_dist.png")
 ```
 
-## Precision Indices
+## Precision indices
 
-The most common way of referring to the width of this distribution of sample mean is with the term standard error. Standard error is simply the standard deviation of the sample means. We calculate the standard error of the mean with using Formula \@ref(eq:samplesechnext) below.  We use k in the formula to refer to the number of sample mean in the distribution.  
+The most common way of referring to the width of this distribution of sample mean is with the term standard error. Standard error is simply the standard deviation of the sample means. We calculate the standard error of the mean with using Formula \@ref(eq:samplesechnext) below.  We use k in the formula to refer to the number of sample means in the distribution.  
 
 \begin{equation} 
 \sigma_{\bar{x}} = \sqrt{\frac{\sum{(\bar{x} - \bar{\bar{x}})^2}}{k}}
       (\#eq:samplesechnext)
 \end{equation} 
 
-Notice that the formula for standard error is actually just the formula for standard deviation but with notation adapted to reflect the fact we are examing sample means instead of people.
+Notice that the formula for standard error is actually just the formula for standard deviation but with notation adapted to reflect the fact we are examing sample means (i.e., $\bar{x}$'s) instead of people (i.e., X's).
 
-Often we will not talk about standard error but rather the variance of the distribution of sample means. When we do so, we are talking about the same thing - the variability in sample mean - but just using different units. You can see the formula for the variance in sample means, see Formula \@ref(eq:samplevarchnext) below, is the just a squared version of the standard error equation, Formula \@ref(eq:samplesechnext) above.
+Often we will not talk about standard error but rather the variance of the distribution of sample means. When we do so, we are talking about the same thing - the variability in sample means - but using different units. You can see the formula for the variance in sample means, see Formula \@ref(eq:samplevarchnext) below, is the just a squared version of the standard error equation, Formula \@ref(eq:samplesechnext) above.
 
 \begin{equation} 
 \sigma_{\bar{x}}^2 = \frac{\sum{(\bar{x} - \bar{\bar{x}})^2}}{k}
       (\#eq:samplevarchnext)
 \end{equation} 
 
-How do we interpret variance of sample means? Assuming the sample mean is an unbiased estimator of the population mean (i.e., $\bar{\bar{x}} = \mu$), then the variance of the sample means is simply the average of the squared differences between sample means and the population mean. Standard error is simply the square root of the variance of sample means. Both are different ways of describing the same things - the extent to which sample means differ from the population mean. 
+How do we interpret variance of sample means? Assuming the sample mean is an unbiased estimator of the population mean (i.e., $\bar{\bar{x}} = \mu$), then the **variance of the sample means is simply the average of the squared differences between sample means and the population mean**. Standard error is simply the square root of the variance of sample means. Both are different ways of describing the same thing - the precision with which sample means estimate the population mean. 
 
 If the variance of sample means is large, it indicates sample means differ considerably (on average) from the population mean. If the variance of sample means is small, it indicates sample means differ only slightly (on average) from the population mean. If the variance of sample means is zero, all the sample means are exactly the same as the population mean.
 
@@ -121,7 +121,7 @@ We can calculate the variance of sample means below:
 
 ```{r}
 many_samples %>% 
-   summarise(var_of_means = var(sample.mean)) %>%
+   summarise(var_of_means = var.pop(sample.mean)) %>%
    as.data.frame()
 
 ```
@@ -131,12 +131,12 @@ The standard error of sample mean is just the square root of this value:
 
 ```{r}
 many_samples %>% 
-   summarise(sd_of_means = sqrt(var(sample.mean))) %>%
+   summarise(sd_of_means = sqrt(var.pop(sample.mean))) %>%
    as.data.frame()
 
 ```
 
-Thus, using symbols:
+Thus, we can indicate the precision with which sample means ($\bar{x}$) estimate the population mean ($\mu$) using the notation below. We use $\sigma_{\bar{x}}^2$ to refer to the variance of sample means and $\sigma_{\bar{x}}$ to refer to the standard error of sample means. Again notice in the notation for both of these symbols there is a subscript with an $\bar{x}$ to remind us we are talking about the variability of sample means (and not people).
 
 $$
 \begin{aligned} 
@@ -148,16 +148,16 @@ $$
 
 ## A short cut
 
-In the previous section we used a computer simulation to calculate the variance of sample means. This involved a many steps:
+In the previous section we used a computer simulation to calculate the variance of sample means. This involved several steps:
 
 1. Obtaining the full population
-2. Obtain 50000 samples (each n = 10) from the population
+2. Creating 50000 samples (each n = 10) from the population
 3. Calculating for each sample the mean
 4. Calculating the variance of the 50000 sample mean as per Formula \@ref(eq:samplevarchnext)
 
 All those steps are a lot of work - and a lot of computer time. Interestingly, we don’t need to go to all that work to determine the variance of sample means. There is a quicker way to obtain the variance of sample means. That is, there is a quicker way to determine the precision with which sample means estimate the population mean when we use a sample size of $n$ = 10.
 
-Statisticians have created a short-cut formula for obtaining the variance of sample means. The equation by itself, see Formula \@ref(eq:samplevar2chnext) below, is extraordinarily simple to use. The formula, however, is not easy to understand. Over many years of teaching, we’ve seen students struggle to understand why the formula is structured in the way that it is - looking for a straightforward logic as to why the short-cut formula works. We encourage you to avoid going down that road. Understanding Formula \@ref(eq:samplevar2chnext) below is beyond the scope of this chapter. It was derived via a mathematical proof discussed in HaysXXXX. Simply accept that there is a short cut formula and do not try to understand the logic of the formula. 
+Statisticians have created a short-cut formula for obtaining the variance of sample means. The equation by itself, see Formula \@ref(eq:samplevar2chnext) below, is extraordinarily simple to use. The formula, however, is not easy to understand. Over many years of teaching, we’ve seen students struggle to understand why the formula is structured in the way that it is - looking for a straightforward logic as to why the short-cut formula works. We encourage you to avoid going down that road. Understanding Formula \@ref(eq:samplevar2chnext) below is beyond the scope of this chapter and, likely, your mathematical background at this point. It was derived via a complex mathematical proof discussed in @hays1994 if you want more information. Simply accept that there is a short-cut formula and do not try to understand the logic of the formula. 
 
 Variance sample means:
 
@@ -166,7 +166,7 @@ Variance sample means:
       (\#eq:samplevar2chnext)
 \end{equation} 
 
-You can see that with this formula the variance of sample means, Formula \@ref(eq:samplevar2chnext), is simply the variance of the individuals in the population divided by the sample size. Oddly, this short cut works and provides the variance of sample means. Notice that we don’t have to have the full population, create thousands of sample, or go through any of that calculation work. All we need to know is the standard deviation of the population and the sample size. In the context of the current example we can compute the variance of the sample means using this information. Recall the people's height in the population is $\sigma^2=157.5$ and our sample size is $n$ = 10.
+You can see that with this formula the variance of sample means, Formula \@ref(eq:samplevar2chnext), is simply the variance of the individuals in the population divided by the sample size. Oddly, this short cut works and provides the variance of sample means. Notice that we don’t have to have the full population, create thousands of sample, or go through any of that calculation work. All we need to know is the variance of the population and the sample size. In the context of the current example we can compute the variance of the sample means using this information. Recall the variance of people's heights in the population is $\sigma^2=157.5$ and our sample size is $n$ = 10.
 
 $$
 \begin{aligned} 
@@ -177,9 +177,9 @@ $$
 \end{aligned} 
 $$
 
-We see the variance of the sample means from this short-cut approach is 15.75. Likewise contrast, the variance of the sample means from our simulation was 15.73; incredibly close. If we had use many more samples in the simulation the 15.73 value would have been 15.75; make the two results identical. Thus, the short-cut formula gives us the variance of sample mean without having to do all the simulation work.
+We see the variance of the sample means from this short-cut approach is 15.75 (i.e., $\sigma_{\bar{x}}^2$ = 15.75). Likewise, the variance of the sample means from our simulation was 15.73; incredibly close. If we had use many more samples in the simulation the 15.73 value would have been 15.75; making the two results identical. Thus, the short-cut formula gives us the variance of sample means without having to do all the simulation work.
 
-Of course, variance of sample means in only one of the ways we describe the precision of sample estimates of the population mean. Many people prefer to use standard error (i.e. standard deviation of sample means) instead. The calculation for standard error is below:
+Of course, the variance of sample means in only one of the two ways we describe the precision of sample estimates of the population mean. Many people prefer to use standard error (i.e. standard deviation of sample means) instead. The calculation for standard error is below:
 
 $$
 \begin{aligned} 
@@ -192,11 +192,11 @@ $$
 $$
 
 
-## Estimates
+## Estimates of precision
 
-As wonderful as it is to have a short-cut formula for obtaining the variance of sample means (or standard error) there is a catch. The formula requires knowledge of the population variance  (or standard deviation), In research scenario we don’t the mean or standard deviation of the population. Consequently, we can’t directly calculate the variance of sample mean (or standard error).
+As wonderful as it is to have a short-cut formula for obtaining the variance of sample means (or standard error) there is a catch. The formula requires knowledge of the population variance  (or standard deviation). In a research scenario we don’t know the mean or standard deviation of the population - that's why we're conducting research. Consequently, we can’t directly calculate the variance of sample mean (or standard error).
 
-Fortunately, with just a single study we can use the sample variance (with n-1 in the denominator) to obtain an estimate the population variance. This estimate of the population variance may be higher or lower than the actual population variance - but it will, on average, be correct across many studies. With this estimate of the population variance in hand we can calculate an estimate of the variance of sample means (i.e, the precision of sample means) using Formula \@ref(eq:samplevar2estchnext).
+Fortunately, with just a single study, we can use the sample variance (with n-1 in the denominator) to estimate the population variance. This estimate of the population variance may be higher or lower than the actual population variance - but it will, on average, be correct across many studies. With this estimate of the population variance in hand we can calculate an estimate of the variance of sample means (i.e, the precision of sample means) using Formula \@ref(eq:samplevar2estchnext) below.
 
 Estimated variance sample means:
  
@@ -212,13 +212,15 @@ s_{\bar{x}} = \sqrt{\frac{s^2}{n}} = \frac{s}{{\sqrt{n}}}
       (\#eq:samplese2estchnext)
 \end{equation} 
 
-## A worked example
+### A worked example
 
-Consider a worked example below. Imagine a scenario where we do not anything about the population of heights. Therefore we conduct a study by taking a random sample of 10 people to estimate the average height of people in the population. The sample mean is 174.3cm and the sample variance is 30.90. Therefore, our best guess of the unknown population mean is 174.3cm. Because we used a sample (a small subset of the population) we know that 174.3cm is unlikely to be the actual mean height for the population. The mean height for the population might be higher or lower than 174.3cm. Nonetheless, at this point our best guess is that the mean of the population is 174.3cm; but we recognize that this is just an estimate of the population mean and is likely off by some amount.
+Consider a worked example below. Imagine a scenario where we do not know anything about the population of heights. Therefore we conduct a study by taking a random sample of 10 people to estimate the average height of people in the population. The sample mean is 174.3cm and the sample variance is 30.90. Therefore, our best guess of the unknown population mean is 174.3cm. Because we used a sample (a small subset of the population) we know that 174.3cm is unlikely to be the actual mean height for the population. The mean height for the population might be higher or lower than 174.3cm. Nonetheless, at this point our best guess is that the mean of the population is 174.3cm; but we recognize that this is just an estimate of the population mean and is likely off by some amount.
 
-Wouldn't it be great to know the extent to which the sample mean might differ from the population mean? As budding statisticians, we know we can't know that for this particular sample, but we can try to figure out how much samples differ from the population mean on average (when using $n$ = 10) to help us understand the precision of our current sample estimate (174.3cm) of the population mean. This precision information is exactly what is conveyed by the variance of sample means, $\sigma_{\bar{x}}^2$, or standard error of sample means, $\sigma_{\bar{x}}$.
+Wouldn't it be great to know the extent to which the sample mean might differ from the population mean? As budding statisticians, we know we can't know that for this particular sample, but we can try to figure out how much samples differ from the population mean on average (when using $n$ = 10) to help us understand the precision of our current sample estimate (174.3cm) of the population mean. This precision information is exactly what is conveyed by the variance of sample means, $\sigma_{\bar{x}}^2$, or standard error of sample means, $\sigma_{\bar{x}}$. We can't obtain these precision indices but we estimate them (via $s_{\bar{x}}^2$ and $s_{\bar{x}}$).
 
-We want to know the variance of sample means (or standard error of sample means) but we only have a single study. Therefore, we have to rely on the short-cut formula for determining the variability in sample means. Unfortunately, the short-cut formula for the variance of sample means formula requires the population variance which we don't know. We do, however, have an estimate of the population variance from our sample. The sample variance is 30.9cm$^2$. Therefore, our best guess of the unknown population variance is 30.9cm$^2$. Because we used a sample (a small subset of the population) we know that 30.9cm$^2$ is unlikely to be the actual variance for the population. The variance for the population might be higher or lower than 30.9cm$^2$. Nonetheless, at this point our best guess is that the variance of the population is 30.9cm$^2$; but we recognize that this is just an estimate of the population variance and is likely off by some amount. We can, however, use this information to estimate the variance of sample means:
+We want to know the precision with which sample mean estimate the population mean. Said another way, we want to know the variance of sample means (or standard error of sample means) but we only have a single study. Therefore, we have to rely on the short-cut formula for determining the variability in sample means. Unfortunately, the short-cut formula for the variance of sample means formula requires the population variance which we don't know. We do, however, have an estimate of the population variance from our sample. The sample variance is 30.9cm$^2$. Therefore, our best guess of the unknown population variance is 30.9cm$^2$. Because we used a sample (a small subset of the population) we know that 30.9cm$^2$ is unlikely to be different than the actual variance for the population. The variance for the population might be higher or lower than 30.9cm$^2$. So even though our estimate of the population variance may be "off" in this single sample we are know it will be accurate in the long run averaging over many studies (see previous chapter).
+
+Nonetheless, at this point our best guess is that the variance of the population is 30.9cm$^2$ and we use this information to estimate the variance of sample means:
 
 $$
 \begin{aligned} 
@@ -240,79 +242,58 @@ s_{\bar{x}} &= \sqrt{\frac{s^2}{n}} \\
 $$
 
 
+At this point we don't know the precision of sample means (n = 10) as an estimate of population (i.e., we don't know $\sigma_{\bar{x}}^2$ or $\sigma_{\bar{x}}$). We do have been able to estimate of the precision of sample mean (i.e., with via $s_{\bar{x}}^2$ and $s_{\bar{x}}$).  When every you calculate the variance of sample mean or standard error based on sample data it is ALWAYS just an estimate of the actual variance of sample mean or the actual standard error. 
 
-## Omniscient recap
-
-
-
-When every you calculate the variance of sample mean or standard error based on sample data it is ALWAYS just an estimate of the actual variance of sample mean or the actual standard error. This is evident when you imagine calculating this for many sample as we do below with R code. This code calculate a new column in the many sample data set s2xbar - the ESTIMATED variance of sample means.
-
-
-We used the head() command to see the first few rows of the data. Each row represents a different sample of 10 people. The column sample.mean contains the sample mean which is an estimate of the population mean. The column XX contains the sample variance (using n-1) which is an estimate of the population variance. Notice how each sample/row has a different estimate of the population variance. These estimate will be correct on average even though a single estimate if likely incorrect. The column XX is calculated using the sample variance and the sample size of 10 via Formula XX. Each value in this column is an estimate of the variance of sample means (see Figure XX B). That is each value in this column is an estimate of XX(value) but differs to sampling error. Thus, anytime we calculate the standard error (or variance of sample means) from sample data we are likely incorrect in that case, but correct in the long run.
-
-
-We can see that averaging over many estimate of the variance of sample means provides the same number...
-
-
-
-
-
-
-
-
-## PASTE HERE
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#VAR
-
-
-
-
-\begin{equation} 
-s_{\bar{x}}^2 = \frac{s^2}{n}
-      (\#eq:samplevar2estchnext)
-\end{equation} 
-
-
-
-#SE
-
-
-
-\begin{equation} 
-s_{\bar{x}} = \sqrt{\frac{s^2}{n}} = \frac{s}{{\sqrt{n}}}
-      (\#eq:samplese2estchnext)
-\end{equation} 
-
-
-
-
-
-```{r, include=FALSE}
-library(tidyverse)
-library(learnSampling)
-```
+That fact that an estimate of the variance of sample mean is the best you can do with sample data is evident when we calculate the estimate for the many sample. We do that with the R code below:
 
 ```{r}
-
-
-many_samples <- many_samples %>% mutate(est_se2 = sample.var.n_1/n)
-
-many_samples %>% summarise(avg.of.est_se2 = mean(est_se2))
-
+many_samples <- many_samples %>% 
+   mutate(est_se2 = sample.var.n_1/n)
 ```
 
+The command above calculated the estimate variance of sample mean (est_se2 or $s_{\bar{x}}^2$) for each off the 50000 samples. We can see the first few sample with the head() command.
+
+```{r}
+head(many_samples)
+```
+
+Inspect the est_se2 column. Notice how each of these values is an $s_{\bar{x}}^2$ number that is an estimate of $\sigma_{\bar{x}}^2$ = 15.75. The first estimate, $s_{\bar{x}}^2$ = , is the one we did by hand above. This estimate of the variance of sample means ($s_{\bar{x}}^2$ = 3.09) is much lower than the actual variance of sample means ($\sigma_{\bar{x}}^2$ = 15.75). Notice how the other values in the est_se2 column tend either overestimate or underestimate the variance of sample means. That is the other studies also overestimate or underestimate the precision with which a sample mean ($n$ = 10) estimates the population mean.
+
+
+## Bias of precision estimates
+
+At this point, you might be a bit concerned about our ability to estimate to the variance of sample means ( $\sigma_{\bar{x}}^2$ = 15.75). In the simulation above, we calculated an estimate of the variance of sample mean ($s_{\bar{x}}^2$) and placed those value in the est_se2 column. We saw that the values in this column all differed from the actual variance of sample means (15.75). You might wonder if these estimate of the variance of sample means are themselves bias? The answer is no - they are not biased. Our estimate of the population variance (n-1 in the denominator) was not biased so there is no reason to suspect that the estimate of the variance of sample means are biased. But we can confirm this by averaging over the 50000 samples. If the average of the est_est2 colum is 15.75 (or very close) than $s_{\bar{x}}^2$ is not a biased estimate of $\sigma_{\bar{x}}^2$ = 15.75.
+
+
+```{r}
+many_samples %>% 
+   summarise(avg.of.est_se2 = mean(est_se2))
+```
+
+
+We see that the average of the 50000 estimate of the variance of sample mean ($s_{\bar{x}}^2$) is 15.73 very close to the actual value of $\sigma_{\bar{x}}^2$ = 15.75. Therefore, even though any given estimate of the variance of sample means will be off somewhat due to sampling error; on average, estimate of the variance of sample means will be correct/accurate.
+
+## Where are we
+
+Overview here..sum up.
+
+## Factors influencing precision
+
+n = 10
+
+n = 50 graphs
+
+
+## Precision for other statistics
+
+In this chapter we have focussed on means.
+But it's important to realilze that all statistics have sampling distributions. There is a population d-value and 
+
+1) variance of sample d-value
+2) standard error of sample d-values
+
+Notice that we used standard error for d-values. The concept is general...
+
+Sample size also influence d-value samp
+
+d-value graphs...
