--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -257,7 +257,7 @@ The command above calculated the estimate variance of sample mean (est_se2 or $s
 head(many_samples)
 ```
 
-Inspect the est_se2 column. Notice how each of these values is an $s_{\bar{x}}^2$ number that is an estimate of $\sigma_{\bar{x}}^2$ = 15.75. The first estimate, $s_{\bar{x}}^2$ = , is the one we did by hand above. This estimate of the variance of sample means ($s_{\bar{x}}^2$ = 3.09) is much lower than the actual variance of sample means ($\sigma_{\bar{x}}^2$ = 15.75). Notice how the other values in the est_se2 column tend either overestimate or underestimate the variance of sample means. That is the other studies also overestimate or underestimate the precision with which a sample mean ($n$ = 10) estimates the population mean.
+Inspect the est_se2 column. Notice how each of these values is an $s_{\bar{x}}^2$ number that is an estimate of $\sigma_{\bar{x}}^2$ = 15.75. The first estimate, $s_{\bar{x}}^2$ = 3.09, is the one we did by hand above. This estimate of the variance of sample means ($s_{\bar{x}}^2$ = 3.09) is much lower than the actual variance of sample means ($\sigma_{\bar{x}}^2$ = 15.75). Notice how the other values in the est_se2 column tend either overestimate or underestimate the variance of sample means. That is the other studies also overestimate or underestimate the precision with which a sample mean ($n$ = 10) estimates the population mean.
 
 
 ## Bias of precision estimates
