--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -66,11 +66,14 @@ $$
 
 A sampling distribution is usually thought of as being composed of an infinite number of samples. For pedagogical purposes, we will use a sampling distribution of just 50000 samples. This large number of samples will lead us to roughly the same conclusions as using an infinite, but impractical, number of samples. We obtain 50000 samples with code below:
 
-```{r}
+```{r, eval= FALSE}
 many_samples <- get_M_samples(pop.data = pop_data, 
                               pop.column.name = height,
-                              n = 10,
+                              n = 50,
                               number.of.samples = 50000)
+```
+```{r, echo=FALSE}
+many_samples <- readRDS("ch_samples_precision/many_samples_n10.RDS")
 ```
 
 We can use the head() command to see the first few rows of many_samples. Every row represents a sample of 10 people. That is, each row represents a study with 10 participants for which we measured their heights. For each row/study we have the sample mean and variance (using n-1) for the 10 heights.
@@ -92,7 +95,7 @@ The 50000 means in the sample.mean column form a **sampling distribution**; spec
 
 
 ```{r bothdist2, echo = FALSE, out.width = "80%", fig.scap = "Sampling distribution of the mean.", fig.cap = "Sampling distribution of the mean. The population of individuals is presented at the top and filled with X's to remind you they are individuals. There are more individuals than X's. The sampling distribution of means is presented in the bottom part of the graph. The sampling distribution of means is filled with $\\bar{x}$'s to remind you that it is sample means being graphed. There are more means than $\\bar{x}$'s. The population mean (green line) and the mean of sample means (blue line) are in the same spot, indicating high accuracy (i.e., no bias)."}
-knitr::include_graphics("ch_samples/images/sampling_dist.png")
+knitr::include_graphics("ch_samples_precision/images/sampling_dist.png")
 ```
 
 ## Precision indices
@@ -262,7 +265,7 @@ Inspect the est_se2 column. Notice how each of these values is an $s_{\bar{x}}^2
 
 ## Bias of precision estimates
 
-At this point, you might be a bit concerned about our ability to estimate to the variance of sample means ( $\sigma_{\bar{x}}^2$ = 15.75). In the simulation above, we calculated an estimate of the variance of sample mean ($s_{\bar{x}}^2$) and placed those value in the est_se2 column. We saw that the values in this column all differed from the actual variance of sample means (15.75). You might wonder if these estimate of the variance of sample means are themselves bias? The answer is no - they are not biased. Our estimate of the population variance (n-1 in the denominator) was not biased so there is no reason to suspect that the estimate of the variance of sample means are biased. But we can confirm this by averaging over the 50000 samples. If the average of the est_est2 colum is 15.75 (or very close) than $s_{\bar{x}}^2$ is not a biased estimate of $\sigma_{\bar{x}}^2$ = 15.75.
+At this point, you might be a bit concerned about our ability to estimate to the variance of sample means ( $\sigma_{\bar{x}}^2$ = 15.75). In the simulation above, we calculated an estimate of the variance of sample mean ($s_{\bar{x}}^2$) and placed those value in the est_se2 column. We saw that the values in this column mostly differed from the actual variance of sample means (15.75). You might wonder if these estimate of the variance of sample means are themselves biased? The answer is no - they are not biased. Our estimate of the population variance (n-1 in the denominator) was not biased so there is no reason to suspect that the estimate of the variance of sample means are biased. But we can confirm this by averaging over the 50000 samples. If the average of the est_est2 column is 15.75 (or very close) than $s_{\bar{x}}^2$ is not a biased estimate of $\sigma_{\bar{x}}^2$ = 15.75.
 
 
 ```{r}
@@ -275,25 +278,66 @@ We see that the average of the 50000 estimate of the variance of sample mean ($s
 
 ## Where are we
 
-Overview here..sum up.
+So where are we? We've learned that sample estimates of population means may be overestimates or underestimates. Over many studies, on average, sample means will approximate the population mean. In other words, on average, sample means are accurate. As well, we've learned that the variability in estimates of the population mean is referred to as precision. We can index the precision of sample means, for a given sample size, using two indices: variance of sample means and standard error of sample means (i.e., standard deviation of sample means). Both of these formulas require knowledge of the population variance - something we never have.
+
+When we conduct a single study, we get a sample mean. We can estimate how precise that sample mean is via the variance of sample means / standard error of sample means formulas. But we use an estimate of the population variance in these formulas rather than the actual population variance. As a result, when we calculate variance of sample means (or standard error) using sample data we only obtain and estimates of those values. These estimates are themselves influenced by sampling error - but accurate when averaging over many studies.
+
 
 ## Factors influencing precision
 
-n = 10
+The formula for variance of the sampling distribution for the mean reveals that it is influenced only by the population variance and sample size. In a research scenario, we don't ahve any control over the population variance (it is what it is), but we do have control over sample size. Increasing the sample size decreases the variability in sample means - as illustrated in the formulas below. We also show in Figure \@ref(fig:threedist) the difference that increase the sample size make. The larger the sample size the less sample mean vary due to sampling error. A larger sample size means a more precise estimate of the population parameter.
 
-n = 50 graphs
+Additionally, a larger sample size makes the sample estimate of the population variance more precise. Consequently, it make the sample estimate of the variance of sample means more precision. Therefore, increasing the sample size increase the precision of the sample means and the precision of our estimate of the precision. 
 
+$$
+\begin{aligned} 
+\sigma^2 &= 157.5 \\
+\sigma_{\bar{x}}^2 &= \frac{\sigma^2}{n} = \frac{157.5}{10} = 15.75 \\
+\sigma_{\bar{x}}^2 &= \frac{\sigma^2}{n} = \frac{157.5}{50} = 3.15 \\
+\end{aligned} 
+$$
+
+
+```{r, eval = FALSE, echo = FALSE}
+# n = 50
+many_samples2 <- readRDS("ch_samples_precision/many_samples_n50.RDS")
+
+pg <- ggplot(data = pop_data,
+       mapping = aes(x = height)) +
+  geom_density() +
+  coord_cartesian(xlim = c(140, 205)) +
+  labs(x = "Heights of Individuals", y = "Probability") +
+  scale_x_continuous(breaks = seq(120, 220, by = 5)) +
+  theme_classic()
+
+
+sdg <- ggplot(data = many_samples,
+       mapping = aes(x = sample.mean)) +
+  geom_density(adjust = 1.3) +
+  coord_cartesian(xlim = c(140, 205)) +
+  labs(x = "Mean Height for each sample", y = "Probability") +
+  scale_x_continuous(breaks = seq(120, 220, by = 5)) +
+  theme_classic()
+
+
+sd2g <- ggplot(data = many_samples2,
+       mapping = aes(x = sample.mean)) +
+  geom_density(adjust = 1.3) +
+  coord_cartesian(xlim = c(140, 205)) +
+  labs(x = "Mean Height for each sample", y = "Probability") +
+  scale_x_continuous(breaks = seq(120, 220, by = 5)) +
+  theme_classic()
+
+png(filename = "ch_samples_precision/images/threedist.png", width = 12*300, height = 9*300, res = 300)
+gridExtra::grid.arrange(pg,sdg, sd2g, nrow=3)
+dev.off()
+```
+
+```{r threedist, echo = FALSE, out.width = "80%", fig.scap = "Two sampling distributions", fig.cap = "Two sampling distributions for the mean. The population of individuals is presented at the top and filled with X's to remind you they are individuals. There are more individuals than X's. There are also two sampling distribution of means presented in the bottom part of the graph. Each sampling distribution contains 50000 means. The sampling distributions are filled with $\\bar{x}$'s to remind you that it is sample means being graphed. There are more means than $\\bar{x}$'s. You can see that by using a larger sample size ($n = 50$) there is less variability in sample means than when using a smaller sample size ($n = 10$)."}
+knitr::include_graphics("ch_samples_precision/images/sampling_mdist.png")
+```
 
 ## Precision for other statistics
 
-In this chapter we have focussed on means.
-But it's important to realilze that all statistics have sampling distributions. There is a population d-value and 
+Something about this working for d-values also...
 
-1) variance of sample d-value
-2) standard error of sample d-values
-
-Notice that we used standard error for d-values. The concept is general...
-
-Sample size also influence d-value samp
-
-d-value graphs...
