--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -5761,9 +5761,9 @@ The glimpse() command can be used to confirm that the population contains 100,00
 \begin{verbatim}
 ## Rows: 100,000
 ## Columns: 3
-## $ id     <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 1...
-## $ sex    <chr> "male", "female", "female", "male", "mal...
-## $ height <dbl> 177, 150, 171, 157, 169, 187, 163, 173, ...
+## $ id     <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 1...
+## $ sex    <chr> "male", "female", "female", "male", "male", ...
+## $ height <dbl> 177, 150, 171, 157, 169, 187, 163, 173, 172,...
 \end{verbatim}
 
 We can use the head() command to see the first 10 rows of the 100,00 rows. We see that each row in pop\_data represents a single person. There is a column called height that contains the height for everyone in the population.
@@ -6192,17 +6192,16 @@ Next we inspect movie\_data using the print() command. We see that each row of t
 
 \begin{verbatim}
 ## # A tibble: 8 x 7
-##   title short_title  year  imdb tomatoes_aud boxoffice
-##   <chr> <chr>       <dbl> <dbl>        <dbl>     <dbl>
-## 1 Iron~ Iron         2008   7.9           96       585
-## 2 Thor~ Thor         2017   7.9           93       854
-## 3 Aven~ AV3          2018   8.5           91      2048
-## 4 Aven~ AV4          2019   8.7           91      2744
-## 5 Man ~ Sup          2013   7.1           75       668
-## 6 Batm~ BvS          2015   6.5           63       873
-## 7 Just~ JL           2017   6.5           72       657
-## 8 Wond~ WW           2017   7.5           88       821
-## # ... with 1 more variable: studio <chr>
+##   title    short_title  year  imdb tomatoes_aud boxoffice studio
+##   <chr>    <chr>       <dbl> <dbl>        <dbl>     <dbl> <chr> 
+## 1 Iron Man Iron         2008   7.9           96       585 Marvel
+## 2 Thor Ra~ Thor         2017   7.9           93       854 Marvel
+## 3 Avenger~ AV3          2018   8.5           91      2048 Marvel
+## 4 Avenger~ AV4          2019   8.7           91      2744 Marvel
+## 5 Man of ~ Sup          2013   7.1           75       668 DC    
+## 6 Batman ~ BvS          2015   6.5           63       873 DC    
+## 7 Justice~ JL           2017   6.5           72       657 DC    
+## 8 Wonder ~ WW           2017   7.5           88       821 DC
 \end{verbatim}
 
 Next we use glimpse() to see the columns.
@@ -6216,13 +6215,13 @@ Next we use glimpse() to see the columns.
 \begin{verbatim}
 ## Rows: 8
 ## Columns: 7
-## $ title        <chr> "Iron Man", "Thor Ragnarok", "Aven...
-## $ short_title  <chr> "Iron", "Thor", "AV3", "AV4", "Sup...
-## $ year         <dbl> 2008, 2017, 2018, 2019, 2013, 2015...
-## $ imdb         <dbl> 7.9, 7.9, 8.5, 8.7, 7.1, 6.5, 6.5,...
+## $ title        <chr> "Iron Man", "Thor Ragnarok", "Avengers...
+## $ short_title  <chr> "Iron", "Thor", "AV3", "AV4", "Sup", "...
+## $ year         <dbl> 2008, 2017, 2018, 2019, 2013, 2015, 20...
+## $ imdb         <dbl> 7.9, 7.9, 8.5, 8.7, 7.1, 6.5, 6.5, 7.5
 ## $ tomatoes_aud <dbl> 96, 93, 91, 91, 75, 63, 72, 88
-## $ boxoffice    <dbl> 585, 854, 2048, 2744, 668, 873, 65...
-## $ studio       <chr> "Marvel", "Marvel", "Marvel", "Mar...
+## $ boxoffice    <dbl> 585, 854, 2048, 2744, 668, 873, 657, 821
+## $ studio       <chr> "Marvel", "Marvel", "Marvel", "Marvel"...
 \end{verbatim}
 
 The title and short\_title columns provide the full title and short title for each movie. Additionally, the IMDB rating, the Rotten Tomatoes Audience rating, and the Box Office Mojo revenue numbers are provided in the imdb, tomatoes\_aud, and boxoffice columns, respectively. Finally, the last column, studio, indicates the studio that made the movie (Marvel or DC).
@@ -6248,13 +6247,13 @@ We can confirm the column type has changed by using the glimpse() command again 
 \begin{verbatim}
 ## Rows: 8
 ## Columns: 7
-## $ title        <fct> Iron Man, Thor Ragnarok, Avengers ...
-## $ short_title  <fct> Iron, Thor, AV3, AV4, Sup, BvS, JL...
-## $ year         <dbl> 2008, 2017, 2018, 2019, 2013, 2015...
-## $ imdb         <dbl> 7.9, 7.9, 8.5, 8.7, 7.1, 6.5, 6.5,...
+## $ title        <fct> Iron Man, Thor Ragnarok, Avengers Infi...
+## $ short_title  <fct> Iron, Thor, AV3, AV4, Sup, BvS, JL, WW
+## $ year         <dbl> 2008, 2017, 2018, 2019, 2013, 2015, 20...
+## $ imdb         <dbl> 7.9, 7.9, 8.5, 8.7, 7.1, 6.5, 6.5, 7.5
 ## $ tomatoes_aud <dbl> 96, 93, 91, 91, 75, 63, 72, 88
-## $ boxoffice    <dbl> 585, 854, 2048, 2744, 668, 873, 65...
-## $ studio       <fct> Marvel, Marvel, Marvel, Marvel, DC...
+## $ boxoffice    <dbl> 585, 854, 2048, 2744, 668, 873, 657, 821
+## $ studio       <fct> Marvel, Marvel, Marvel, Marvel, DC, DC...
 \end{verbatim}
 
 \hypertarget{graph-basics}{%
